# test_penalized_icp

./: .gitignore  CMakeLists.txt  Pipfile  README.md
picp/: config_builder.py  icp_sampling.py  main.py  plot_residual_funct.py  plot_trajectory.py  reg_anim_plot.py  scan_generator.py
picp/simulator/: maps.py  scan_generator.py
picp/util/: geometry.py  pose.py  position.py
python/: CMakeLists.txt  main.py  setup.py.in
python/pypm/: __init__.py  data_points.py  icp.py  in_memory_inspector.cpp  in_memory_inspector.h  pypm_core.cpp
test/: data_points_test.py  icp_test.py
